# laser_guidance

./: .dockerignore  .gitignore  README.md  docker-compose.ws30-bridge.yml  plan.md
.script/: 99-laser-capture.rules  competition  scan-camera
config/: calib_guidance.yaml  capture_red_20m.yaml  default.yaml  direct_voltage_calib.yaml  direct_voltage_run.yaml  direct_voltage_run_lut_v1.yaml  geometry_run.yaml
docker/: ros2-jazzy-bridge-entrypoint.sh  ros2-jazzy-bridge.Dockerfile
docs/: hardware_ft4222_dac8568.md  model_contract.md  ros2_interface.md  ws30_lidar.md
include/: config.hpp  types.hpp
models/: vision_voltage_lut_v1.yaml  vision_voltage_lut_v2.yaml  vision_voltage_poly_v1.yaml  vision_voltage_poly_v2.yaml  vision_voltage_poly_v3.yaml  vision_voltage_poly_v4.yaml
ros2/ws30_lidar_bridge/: CMakeLists.txt  package.xml
ros2/ws30_lidar_bridge/src/: ws30_lidar_node.cpp
scripts/: ws30_bridge_docker.sh
src/core/: config.cpp
src/guidance/: depth_estimator.cpp  galvo_driver.cpp  guidance_pipeline.cpp  guidance_pipeline.hpp  lidar_depth_estimator.cpp  lidar_depth_estimator.hpp
src/io/: ws30_receiver.cpp  ws30_receiver.hpp
src/streaming/: video_shm.cpp
src/vision/: model_runtime.cpp
test_data/calib/: geometry_calib_records.csv  geometry_calib_records_v2.csv  geometry_hit_calib_records.csv  voltage_records_new_v1.csv
tests/core/: config_test.cpp
tests/guidance/: lidar_depth_estimator_test.cpp
tests/io/: ws30_receiver_test.cpp
tools/: competition.cpp  guidance.cpp
